# ComfyUI-Long-CLIP

./: README-CN.md  README.md  __init__.py  long_clip.py  pyproject.toml
long_clip_model/: longclip.py  model_longclip.py
workflow/: flux-long.json  sd1-5-long.json  sdxl-long.json
