[project]
name = "comfyui-long-clip"
description = "This project implements the comfyui for long-clip, currently supporting the replacement of clip-l. For SD1.5, the SeaArtLongClip module can be used to replace the original clip in the model, expanding the token length from 77 to 248."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/SeaArtLab/ComfyUI-Long-CLIP"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Long-CLIP"
Icon = ""
